[package]
name = "gaddag-bundle"
version = "0.1.0"
authors = ["Amédée d'Aboville <amedee.daboville@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []

[dependencies]
fst = "0.4.4"
regex-automata = {version = "0.1.9", features=["transducer"]}
