[package]
authors = ["Amédée d'Aboville <amedee.daboville@gmail.com>"]
edition = "2018"
name = "fst-gaddag"
version = "0.1.0"

description = "An implementation of the GADDAG data structure with the FST crate."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []

[dependencies]
fst = "0.4.4"
